[metadata]

name = fibo_sum
version = 1.0
author = Lew Andrade
author_email = andrade.lew@gmail.com
description = Returns the sum of N numbers of the fibonacci sequence
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LewAndrade/fibo-sum
project_urls =
    Bug Tracker = https://github.com/LewAndrade/fibo-sum/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6